setup pixi as env manager

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# pixi environments
+.pixi
+
 # Created by https://www.toptal.com/developers/gitignore/api/python,jupyternotebooks,vim,jetbrains
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,jupyternotebooks,vim,jetbrains
 
