--- a/.github/workflows/static-analysis.yml
+++ b/.github/workflows/static-analysis.yml
@@ -3,13 +3,8 @@ name: Static analysis
 on: push
 
 jobs:
-  call-ruff-workflow:
-    uses: ASFHyP3/actions/.github/workflows/reusable-ruff.yml@v0.20.0
-    permissions:
-      contents: read
-
-  call-mypy-workflow:
-    uses: ASFHyP3/actions/.github/workflows/reusable-mypy.yml@v0.20.0
+  call-secrets-analysis-workflow:
+    uses: ASFHyP3/actions/.github/workflows/reusable-secrets-analysis.yml@v0.20.0
     permissions:
       contents: read
 
@@ -22,6 +17,9 @@ jobs:
       matrix:
         pixi_task:
           - lint-cf
+          - "ruff check --output-format=github"
+          - "ruff format --diff"
+          - type-py
     steps:
       - uses: actions/checkout@v5
       - uses: prefix-dev/setup-pixi@v0.9.3
