--- a/cloudformation.yml
+++ b/cloudformation.yml
@@ -1,25 +1,55 @@
 Resources:
-  S1SlcStack:
+  S1SlcTopic:
+    Type: AWS::SNS::Topic
+
+  S1ASlcStack:
     Type: AWS::CloudFormation::Stack
     Properties:
-      TemplateURL: stacks/s1-burst-cf.yml
+      Parameters:
+        S1SlcTopicArn: !Ref S1SlcTopic
+      TemplateURL: stacks/s1a-slc-cf.yml
+
+  S1BSlcStack:
+    Type: AWS::CloudFormation::Stack
+    Properties:
+      Parameters:
+        S1SlcTopicArn: !Ref S1SlcTopic
+      TemplateURL: stacks/s1b-slc-cf.yml
+
+  S1CSlcStack:
+    Type: AWS::CloudFormation::Stack
+    Properties:
+      Parameters:
+        S1SlcTopicArn: !Ref S1SlcTopic
+      TemplateURL: stacks/s1c-slc-cf.yml
+
+  S1BurstTopic:
+    Type: AWS::SNS::Topic
 
   S1BurstStack:
     Type: AWS::CloudFormation::Stack
     Properties:
+      Parameters:
+        S1BurstTopicArn: !Ref S1BurstTopic
       TemplateURL: stacks/s1-burst-cf.yml
 
 Outputs:
-  S1SlcQueueUrl:
-    Description: URL of the SQS Queue for Sentinel-1 SLCs
-    Value: !GetAtt S1SlcStack.Outputs.QueueUrl
+  S1ASlcQueueUrl:
+    Description: URL of the SQS Queue for Sentinel-1A SLCs
+    Value: !GetAtt S1ASlcStack.Outputs.QueueUrl
+  S1BSlcQueueUrl:
+    Description: URL of the SQS Queue for Sentinel-1B SLCs
+    Value: !GetAtt S1BSlcStack.Outputs.QueueUrl
+  S1CSlcQueueUrl:
+    Description: URL of the SQS Queue for Sentinel-1C SLCs
+    Value: !GetAtt S1CSlcStack.Outputs.QueueUrl
   S1SlcTopicArn:
     Description: ARN of the SNS Topic for Sentinel-1 SLCs
-    Value: !GetAtt S1SlcStack.Outputs.topicArn
+    Value: !Ref S1SlcTopic
 
   S1BurstQueueUrl:
     Description: URL of the SQS Queue for Sentinel-1 Bursts
     Value: !GetAtt S1BurstStack.Outputs.QueueUrl
   S1BurstTopicArn:
     Description: ARN of the SNS Topic for Sentinel-1 Bursts
-    Value: !GetAtt S1BurstStack.Outputs.topicArn
+    Value: !Ref S1BurstTopic
