--- a/cloudformation.yml
+++ b/cloudformation.yml
@@ -2,45 +2,41 @@ AWSTemplateFormatVersion: 2010-09-09
 
 Resources:
   # TODO: Nice name?
-  S1SlcTopic:
+  Topic:
     Type: AWS::SNS::Topic
 
   S1ASlcStack:
     Type: AWS::CloudFormation::Stack
     Properties:
       Parameters:
-        TopicArn: !Ref S1SlcTopic
+        TopicArn: !Ref Topic
       TemplateURL: stacks/sqs-to-sns-cf.yml
 
   S1BSlcStack:
     Type: AWS::CloudFormation::Stack
     Properties:
       Parameters:
-        TopicArn: !Ref S1SlcTopic
+        TopicArn: !Ref Topic
       TemplateURL: stacks/sqs-to-sns-cf.yml
 
   S1CSlcStack:
     Type: AWS::CloudFormation::Stack
     Properties:
       Parameters:
-        TopicArn: !Ref S1SlcTopic
+        TopicArn: !Ref Topic
       TemplateURL: stacks/sqs-to-sns-cf.yml
-
-  # TODO: Nice name?
-  S1BurstTopic:
-    Type: AWS::SNS::Topic
 
   S1BurstStack:
     Type: AWS::CloudFormation::Stack
     Properties:
       Parameters:
-        TopicArn: !Ref S1BurstTopic
+        TopicArn: !Ref Topic
       TemplateURL: stacks/sqs-to-sns-cf.yml
 
 Outputs:
-  S1SlcTopicArn:
-    Description: ARN of the SNS Topic for Sentinel-1 SLCs
-    Value: !Ref S1SlcTopic
+  TopicArn:
+    Description: ARN of the SNS Topic
+    Value: !Ref Topic
   S1ASlcQueueUrl:
     Description: URL of the SQS Queue for Sentinel-1A SLCs
     Value: !GetAtt S1ASlcStack.Outputs.QueueUrl
@@ -50,10 +46,6 @@ Outputs:
   S1CSlcQueueUrl:
     Description: URL of the SQS Queue for Sentinel-1C SLCs
     Value: !GetAtt S1CSlcStack.Outputs.QueueUrl
-
-  S1BurstTopicArn:
-    Description: ARN of the SNS Topic for Sentinel-1 Bursts
-    Value: !Ref S1BurstTopic
   S1BurstQueueUrl:
     Description: URL of the SQS Queue for Sentinel-1 Bursts
     Value: !GetAtt S1BurstStack.Outputs.QueueUrl
