--- a/cloudformation.yml
+++ b/cloudformation.yml
@@ -34,6 +34,37 @@ Resources:
                   - sqs
                   - lambda
 
+  DeadLetterQueue:
+    Type: AWS::SQS::Queue
+    Properties:
+      MessageRetentionPeriod: 1209600
+
+  PipeExecutionRole:
+    Type: AWS::IAM::Role
+    Properties:
+      AssumeRolePolicyDocument:
+        Version: '2012-10-17'
+        Statement:
+          - Effect: Allow
+            Principal:
+              Service: pipes.amazonaws.com
+            Action: sts:AssumeRole
+      Policies:
+        - PolicyName: PipeAccessPolicy
+          PolicyDocument:
+            Version: '2012-10-17'
+            Statement:
+              - Effect: Allow
+                Action:
+                  - sqs:ReceiveMessage
+                  - sqs:DeleteMessage
+                  - sqs:GetQueueAttributes
+                Resource: !Sub "arn:aws:sqs:${AWS::Region}:${AWS::AccountId}:*"
+              - Effect: Allow
+                Action:
+                  - sns:Publish
+                Resource: !Ref Topic
+
   "Fn::ForEach::CollectionNamesLoop":
     - CollectionName
     - !Ref CollectionNames
@@ -42,6 +73,8 @@ Resources:
         Properties:
           Parameters:
             TopicArn: !Ref Topic
+            PipeExecutionRoleArn: !GetAtt PipeExecutionRole.Arn
+            DeadLetterQueueArn: !GetAtt DeadLetterQueue.Arn
           TemplateURL: stacks/sqs-to-sns-cf.yml
 
 Outputs:
