--- a/stacks/sqs-to-sns-cf.yml
+++ b/stacks/sqs-to-sns-cf.yml
@@ -1,14 +1,17 @@
 AWSTemplateFormatVersion: 2010-09-09
 
 Parameters:
+
   TopicArn:
     Type: String
 
+  PipeExecutionRoleArn:
+    Type: String
+
+  DeadLetterQueueArn:
+    Type: String
+
 Resources:
-  DeadLetterQueue:
-    Type: AWS::SQS::Queue
-    Properties:
-      MessageRetentionPeriod: 1209600
 
   Queue:
     Type: AWS::SQS::Queue
@@ -16,7 +19,7 @@ Resources:
       MessageRetentionPeriod: 1209600
       VisibilityTimeout: 900
       RedrivePolicy:
-        deadLetterTargetArn: !GetAtt DeadLetterQueue.Arn
+        deadLetterTargetArn: !Ref DeadLetterQueueArn
         maxReceiveCount: 3
 
   QueuePolicy:
@@ -36,45 +39,12 @@ Resources:
   Pipe:
     Type: AWS::Pipes::Pipe
     Properties:
-      RoleArn: !GetAtt PipeExecutionRole.Arn
+      RoleArn: !Ref PipeExecutionRoleArn
       Source: !GetAtt Queue.Arn
       Target: !Ref TopicArn
-      SourceParameters:
-        SqsQueueParameters:
-          BatchSize: 10
-          MaximumBatchingWindowInSeconds: 60
-        FilterCriteria:
-          Filters:
-            - Pattern: '{ "body": {"Type": ["Notification"]}}'
-
-
-  PipeExecutionRole:
-    Type: AWS::IAM::Role
-    Properties:
-      AssumeRolePolicyDocument:
-        Version: '2012-10-17'
-        Statement:
-          - Effect: Allow
-            Principal:
-              Service: pipes.amazonaws.com
-            Action: sts:AssumeRole
-      Policies:
-        - PolicyName: PipeAccessPolicy
-          PolicyDocument:
-            Version: '2012-10-17'
-            Statement:
-              - Effect: Allow
-                Action:
-                  - sqs:ReceiveMessage
-                  - sqs:DeleteMessage
-                  - sqs:GetQueueAttributes
-                Resource: !GetAtt Queue.Arn
-              - Effect: Allow
-                Action:
-                  - sns:Publish
-                Resource: !Ref TopicArn
 
 Outputs:
+
   QueueUrl:
     Description: URL of the SQS Queue
     Value: !Ref Queue
