--- a/cicd/cidc-cf.yml
+++ b/cicd/cidc-cf.yml
@@ -1,11 +1,17 @@
 AWSTemplateFormatVersion: 2010-09-09
 
 Parameters:
+
   TemplateBucketName:
     Description: AWS S3 bucket name for uploading CloudFormation templates
     Type: String
 
+  SourceRepositories:
+    Type: CommaDelimitedList
+    Default: repo:ASFHyP3/*
+
 Resources:
+
   CloudformationDeploymentRole:
     Type: AWS::IAM::Role
     Properties:
@@ -43,10 +49,21 @@ Resources:
                   - cloudformation:GetTemplateSummary
                 Resource: !Sub "arn:aws:cloudformation:${AWS::Region}:${AWS::AccountId}:stack/*"
 
-  GithubActionsUser:
-    Type: AWS::IAM::User
+  OIDCRole:
+    Type: AWS::IAM::Role
     Properties:
-      UserName: github-actions
+      AssumeRolePolicyDocument:
+        Version: 2012-10-17
+        Statement:
+          - Effect: Allow
+            Principal:
+              Federated: !Sub arn:aws:iam::${AWS::AccountId}:oidc-provider/token.actions.githubusercontent.com
+            Action: sts:AssumeRoleWithWebIdentity
+            Condition:
+              StringLike:
+                'token.actions.githubusercontent.com:sub': !Ref SourceRepositories
+              StringEqualsIgnoreCase:
+                'token.actions.githubusercontent.com:aud': sts.amazonaws.com
       Policies:
         - PolicyName: github-actions-user-policy
           PolicyDocument:
@@ -81,3 +98,10 @@ Resources:
                   - cloudformation:DeleteChangeSet
                   - cloudformation:GetTemplateSummary
                 Resource: !Sub "arn:aws:cloudformation:${AWS::Region}:${AWS::AccountId}:stack/*"
+
+  GitHubActionsOidcProvider:
+    Type: AWS::IAM::OIDCProvider
+    Properties:
+      ClientIdList:
+        - sts.amazonaws.com
+      Url: https://token.actions.githubusercontent.com
