--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,10 @@ license = {text = "BSD-3-Clause"}
 readme = "README.md"
 
 requires-python = "==3.13.*"
-dependencies = []
+dependencies = [
+    'requests==2.32.5',
+    'boto3==1.40.68',
+]
 
 [project.optional-dependencies]
 develop = [
@@ -21,9 +24,6 @@ develop = [
     'ruff==0.11.12',
     'setuptools_scm>=8',
     'types-requests',
-]
-configure = [
-    'requests'
 ]
 
 [project.urls]
