--- a/pyproject.toml
+++ b/pyproject.toml
@@ -90,7 +90,7 @@ pixi-pycharm = ">=0.0.8"
 #cmr_notifier = { path = ".", editable = true }
 
 [tool.pixi.environments]
-default = { features = ["develop", "configure"], solve-group = "default" }
+default = { features = ["develop"], solve-group = "default" }
 
 [tool.pixi.tasks]
 lint-cf = "cfn-lint --template $(find . -name cloudformation.yml) --info --ignore-checks W3002"
