--- a/cicd/cidc-cf.yml
+++ b/cicd/cidc-cf.yml
@@ -12,43 +12,6 @@ Parameters:
 
 Resources:
 
-  CloudformationDeploymentRole:
-    Type: AWS::IAM::Role
-    Properties:
-      AssumeRolePolicyDocument:
-        Version: 2012-10-17
-        Statement:
-          Action: sts:AssumeRole
-          Principal:
-            Service: cloudformation.amazonaws.com
-          Effect: Allow
-      Policies:
-        - PolicyName: cloud-formation-deployment-policy
-          PolicyDocument:
-            Version: 2012-10-17
-            Statement:
-              - Effect: Allow
-                Action:
-                  - events:*
-                  - iam:*
-                  - lambda:*
-                  - logs:*
-                  - sns:*
-                Resource: "*"
-
-              - Effect: Allow
-                Action:
-                  - cloudformation:SetStackPolicy
-                  - cloudformation:CreateStack
-                  - cloudformation:UpdateStack
-                  - cloudformation:DeleteStack
-                  - cloudformation:CreateChangeSet
-                  - cloudformation:DescribeChangeSet
-                  - cloudformation:ExecuteChangeSet
-                  - cloudformation:DeleteChangeSet
-                  - cloudformation:GetTemplateSummary
-                Resource: !Sub "arn:aws:cloudformation:${AWS::Region}:${AWS::AccountId}:stack/*"
-
   OIDCRole:
     Type: AWS::IAM::Role
     Properties:
@@ -65,7 +28,7 @@ Resources:
               StringEqualsIgnoreCase:
                 'token.actions.githubusercontent.com:aud': sts.amazonaws.com
       Policies:
-        - PolicyName: github-actions-user-policy
+        - PolicyName: oidc-deploy-policy
           PolicyDocument:
             Version: 2012-10-17
             Statement:
@@ -77,11 +40,13 @@ Resources:
                 Resource: "*"
 
               - Effect: Allow
-                Action: iam:PassRole
-                Resource: !GetAtt CloudformationDeploymentRole.Arn
-                Condition:
-                  StringLike:
-                    iam:AssociatedResourceArn: !Sub "arn:aws:cloudformation:${AWS::Region}:${AWS::AccountId}:stack/*"
+                Action:
+                  - events:*
+                  - iam:*
+                  - lambda:*
+                  - logs:*
+                  - sns:*
+                Resource: "*"
 
               - Effect: Allow
                 Action: s3:PutObject
