add dynamodb permissions to cicd stack

--- a/cicd/cicd-cf.yml
+++ b/cicd/cicd-cf.yml
@@ -46,6 +46,7 @@ Resources:
                   - lambda:*
                   - logs:*
                   - sns:*
+                  - dynamodb:*
                 Resource: "*"
 
               - Effect: Allow
