--- a/cloudformation.yml
+++ b/cloudformation.yml
@@ -104,6 +104,7 @@ Resources:
       Targets:
         - Arn: !GetAtt Lambda.Arn
           Id: schedule
+          Input: '{"window_in_seconds": 120}'
 
   EventPermission:
     Type: AWS::Lambda::Permission
