--- a/cloudformation.yml
+++ b/cloudformation.yml
@@ -1,5 +1,10 @@
 AWSTemplateFormatVersion: 2010-09-09
 
+Parameters:
+  EcrImageUri:
+    Description: ECR image URI
+    Type: String
+
 Resources:
 
   # TODO: Nice name?
@@ -63,13 +68,17 @@ Resources:
   Lambda:
     Type: AWS::Lambda::Function
     Properties:
+      PackageType: Image
+      ImageConfig:
+        Command:
+          - cmr_notifier.main.lambda_handler
+      Code:
+        ImageUri: !Ref EcrImageUri
       Environment:
         Variables:
           TOPIC_ARN: !Ref Topic
           TABLE_NAME: !Ref Table
           WINDOW_IN_SECONDS: 120
-      Code: src/
-      Handler: main.lambda_handler
       MemorySize: 128
       Role: !GetAtt Role.Arn
       Runtime: python3.13
