lambda ecr permissions

--- a/cloudformation.yml
+++ b/cloudformation.yml
@@ -64,6 +64,14 @@ Resources:
                   - dynamodb:GetItem
                   - dynamodb:PutItem
                 Resource: !GetAtt Table.Arn
+                        - Effect: Allow
+              - Effect: Allow
+                Action:
+                  - ecr:BatchGetImage
+                  - ecr:BatchCheckLayerAvailability
+                  - ecr:GetAuthorizationToken
+                  - ecr:GetDownloadUrlForLayer
+                Resource: !Sub "arn:aws:ecr:${AWS::Region}:${AWS::AccountId}:repository/*"
 
   Lambda:
     Type: AWS::Lambda::Function
