add ecr to oidc policy

--- a/cicd/cicd-cf.yml
+++ b/cicd/cicd-cf.yml
@@ -37,6 +37,7 @@ Resources:
 
               - Effect: Allow
                 Action:
+                  - ecr:*
                   - events:*
                   - iam:*
                   - lambda:*
