--- a/pyproject.toml
+++ b/pyproject.toml
@@ -90,8 +90,8 @@ platforms = ["linux-64", "linux-aarch64", "osx-64", "osx-arm64"]
 # For PyCharm IDE integration
 pixi-pycharm = ">=0.0.8"
 
-[tool.pixi.pypi-dependencies]
-cmr_notifier = { path = ".", editable = true }
+#[tool.pixi.pypi-dependencies]
+#cmr_notifier = { path = ".", editable = true }
 
 [tool.pixi.environments]
 default = { features = ["develop"], solve-group = "default" }
