--- a/pyproject.toml
+++ b/pyproject.toml
@@ -92,7 +92,7 @@ pixi-pycharm = ">=0.0.8"
 
 # FIXME: this adds the editable install to the pixi lock file, but because we use setuptools_scm, the version
 #        number expected by pixi includes the commit hash and so the lockfile is almost never up to date. Need to
-#        figure out how to do both.
+#        figure out how to do both. See: https://github.com/prefix-dev/pixi/issues/2512
 #[tool.pixi.pypi-dependencies]
 #cmr_notifier = { path = ".", editable = true }
 
