--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,8 @@ dependencies = [
 develop = [
     'cfn-lint==1.22.5',
     'mypy==1.16.0',
+    'pytest==8.4.2',
+    'responses==0.25.8',
     'ruff==0.11.12',
     'setuptools_scm>=8',
     'types-requests',
