--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -7,13 +7,8 @@ on:
   push:
     branches:
       - develop
-  workflow_run:
-    workflows:
-      - "Tag New Version"
-    branches:
-      - main
-    types:
-      - completed
+    tags:
+      - 'v*'
 
 jobs:
   version-info:
@@ -115,7 +110,7 @@ jobs:
   deploy:
     if: ${{ github.event_name != 'pull_request' }}
     concurrency:
-      group: deploy-${{ github.ref == 'refs/heads/main' && 'prod' || 'test' }}
+      group: deploy-${{ startsWith(github.ref, 'refs/tags/v') && 'prod' || 'test' }}
     runs-on: ubuntu-latest
     needs:
       - dockerize
@@ -136,7 +131,7 @@ jobs:
         run: |
           aws cloudformation deploy \
             --template-file cloudformation.yml \
-            --stack-name=cmr-notifier-${{ github.ref == 'refs/heads/main' && 'prod' || 'test' }} \
+            --stack-name=cmr-notifier-${{ startsWith(github.ref, 'refs/tags/v') && 'prod' || 'test' }} \
             --capabilities CAPABILITY_IAM \
             --parameter-overrides \
               EcrImageUri=${{ needs.dockerize.outputs.image_uri }} \
