--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -110,9 +110,10 @@ jobs:
   deploy:
     if: ${{ github.event_name != 'pull_request' }}
     concurrency:
-      group: deploy-${{ startsWith(github.ref, 'refs/tags/v') && 'prod' || 'test' }}
+      group: deploy-${{ contains(needs.version-info.outputs.version_tag, '.dev') && 'test' || 'prod' }}
     runs-on: ubuntu-latest
     needs:
+      - version-info
       - dockerize
     permissions:
       contents: read
@@ -131,7 +132,7 @@ jobs:
         run: |
           aws cloudformation deploy \
             --template-file cloudformation.yml \
-            --stack-name=cmr-notifier-${{ startsWith(github.ref, 'refs/tags/v') && 'prod' || 'test' }} \
+            --stack-name=cmr-notifier-${{ contains(needs.version-info.outputs.version_tag, '.dev') && 'test' || 'prod' }} \
             --capabilities CAPABILITY_IAM \
             --parameter-overrides \
               EcrImageUri=${{ needs.dockerize.outputs.image_uri }} \
